force-app/main/default/objects/Financial__c/Financial__c.object-meta.xml
<CustomObject>
    <label>Financial</label>
    <nameField>
        <displayFormat>F#{YYYY}{MM}-{0000}</displayFormat>
        <label>Financial Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Financial</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>