force-app/main/default/objects/Financial__c/fields/Budget__c.field-meta.xml
<CustomField>
    <fullName>Budget__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Budget</label>
    <referenceTo>Budget_Aggregator__c</referenceTo>
    <relationshipLabel>Financials</relationshipLabel>
    <relationshipName>Financial</relationshipName>
    <type>Lookup</type>
</CustomField>