force-app/main/default/objects/Financial__c/fields/Labour_and_Material_Engagement__c.field-meta.xml
<CustomField>
    <fullName>Labour_and_Material_Engagement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Labour and Material Engagement</label>
    <referenceTo>Labour_Material_Engagement__c</referenceTo>
    <relationshipLabel>Financials</relationshipLabel>
    <relationshipName>Financial</relationshipName>
    <type>Lookup</type>
</CustomField>