force-app/main/default/objects/Financial__c/fields/Resource_Engagement__c.field-meta.xml
<CustomField>
    <fullName>Resource_Engagement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Resource Engagement</label>
    <referenceTo>Resource_Engagement__c</referenceTo>
    <relationshipLabel>Financials</relationshipLabel>
    <relationshipName>Financials</relationshipName>
    <type>Lookup</type>
</CustomField>